feat: added generator for blocks

--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -43,7 +43,8 @@
         "survey-core": "^2.0.9",
         "winston": "^3.17.0",
         "xmlbuilder2": "^3.1.1",
-        "@dxp/blocks.faq": "*"
+        "@dxp/blocks.faq": "*",
+        "@dxp/blocks.hero-banner": "*"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.7",
