--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -44,7 +44,8 @@
         "winston": "^3.17.0",
         "xmlbuilder2": "^3.1.1",
         "@dxp/blocks.faq": "*",
-        "@dxp/blocks.hero-banner": "*"
+        "@dxp/blocks.hero-banner": "*",
+        "@dxp/blocks.feature-section": "*"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.7",
