--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -45,7 +45,8 @@
         "xmlbuilder2": "^3.1.1",
         "@dxp/blocks.faq": "*",
         "@dxp/blocks.hero-banner": "*",
-        "@dxp/blocks.feature-section": "*"
+        "@dxp/blocks.feature-section": "*",
+        "@dxp/blocks.cta-section": "*"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.7",
