--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -40,7 +40,8 @@
         "@dxp/blocks.hero-banner": "*",
         "@dxp/blocks.feature-section": "*",
         "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.bento-grid": "*"
+        "@dxp/blocks.bento-grid": "*",
+        "@dxp/blocks.media-section": "*"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "^15.3.2",
