--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -41,7 +41,8 @@
         "@dxp/blocks.feature-section": "*",
         "@dxp/blocks.cta-section": "*",
         "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.media-section": "*"
+        "@dxp/blocks.media-section": "*",
+        "@dxp/blocks.quick-links": "*"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "^15.3.2",
