feat: FeatureSectionGrid block implemented

--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -50,7 +50,8 @@
         "@dxp/blocks.cta-section": "*",
         "@dxp/blocks.bento-grid": "*",
         "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.quick-links": "*"
+        "@dxp/blocks.quick-links": "*",
+        "@dxp/blocks.feature-section-grid": "*"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.7",
