--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,7 +42,8 @@
         "@dxp/blocks.cta-section": "*",
         "@dxp/blocks.bento-grid": "*",
         "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.quick-links": "*"
+        "@dxp/blocks.quick-links": "*",
+        "@dxp/blocks.feature-section-grid": "*"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "^15.3.2",
