--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,10 @@
         },
         "dev": {
             "cache": false,
-            "persistent": true
+            "persistent": true,
+            "dependsOn": [
+                "^build"
+            ]
         },
         "start": {
             "cache": false,
