--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dxp/framework",
-    "version": "1.10.0",
+    "version": "0.0.1\"",
     "private": false,
     "license": "MIT",
     "exports": {
