--- a/packages/integrations/mocked/package.json
+++ b/packages/integrations/mocked/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dxp/integrations.mocked",
-    "version": null,
+    "version": "0.0.2",
     "private": false,
     "license": "MIT",
     "exports": {
