--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -30,6 +30,7 @@
         "@dxp/integrations.strapi-cms": "*",
         "@dxp/configs.integrations": "*",
         "@o2s/telemetry": "*",
+        "@dxp/utils.api-harmonization": "*",
         "@o2s/utils.logger": "*",
         "compression": "^1.8.0",
         "cookie": "^1.0.2",
