--- a/packages/blocks/faq/tsconfig.frontend.json
+++ b/packages/blocks/faq/tsconfig.frontend.json
@@ -9,6 +9,7 @@
         "declaration": true,
         "declarationMap": true,
         "noEmit": false,
+        "jsx": "react",
         "baseUrl": "./src/frontend"
     },
     "include": [
