fix: added mising dependencies

--- a/packages/utils/frontend/tsconfig.json
+++ b/packages/utils/frontend/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "@dxp/typescript-config/ui.json",
     "compilerOptions": {
         "outDir": "./dist",
-        "baseUrl": "./"
+        "baseUrl": "./",
+        "jsx": "react"
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
