--- a/packages/utils/frontend/package.json
+++ b/packages/utils/frontend/package.json
@@ -20,6 +20,16 @@
     "dependencies": {
         "@dxp/framework": "*"
     },
+    "devDependencies": {
+        "@dxp/eslint-config": "*",
+        "@dxp/prettier-config": "*",
+        "@dxp/typescript-config": "*",
+        "concurrently": "^9.1.2",
+        "eslint": "^9.27.0",
+        "prettier": "^3.5.3",
+        "tsc-alias": "^1.8.16",
+        "typescript": "^5.8.3"
+    },
     "peerDependencies": {
         "jsonwebtoken": "^9.0.2",
         "dayjs": "^1.11.13"
