--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -53,7 +53,8 @@
         "@dxp/blocks.media-section": "*",
         "@dxp/blocks.quick-links": "*",
         "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.pricing-section": "*"
+        "@dxp/blocks.pricing-section": "*",
+        "@dxp/blocks.document-list": "*"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.7",
