--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -44,7 +44,8 @@
         "@dxp/blocks.media-section": "*",
         "@dxp/blocks.quick-links": "*",
         "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.pricing-section": "*"
+        "@dxp/blocks.pricing-section": "*",
+        "@dxp/blocks.document-list": "*"
     },
     "devDependencies": {
         "@next/bundle-analyzer": "^15.3.2",
