--- a/apps/api-harmonization/.env.local
+++ b/apps/api-harmonization/.env.local
@@ -16,7 +16,7 @@ DEFAULT_PRODUCT_UNIT=PCS
 SUPPORTED_CURRENCIES=EUR,USD,PLN
 SUPPORTED_LOCALES=en,de,pl
 
-FRONT_BASE_URLS=http://localhost:3000
+FRONT_BASE_URLS=http://localhost:3000,http://localhost:6006
 
 MOCKED_INTEGRATION_DELAYS_ENABLED=true
 
