--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "release": "changeset publish",
         "update-deps": "npx npm-check-updates --format group --workspaces --interactive",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "turbo build && storybook build"
     },
     "engines": {
         "node": ">=22"
