feat: added Storybook support for blocks

--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,11 @@
         "start": {
             "cache": false,
             "persistent": true
+        },
+        "build-storybook": {
+            "dependsOn": [
+                "^build"
+            ]
         }
     }
 }
