feat: added Storybook support for blocks

--- a/turbo.json
+++ b/turbo.json
@@ -47,8 +47,10 @@
         },
         "build-storybook": {
             "dependsOn": [
+                "^build-storybook",
                 "^build"
-            ]
+            ],
+            "outputs": ["storybook-static/**"]
         }
     }
 }
