--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -14,7 +14,7 @@
         "dev": "cross-env NODE_ENV=development nest start --watch",
         "debug": "nest start --debug --watch",
         "build": "nest build",
-        "start": "node dist/src/main",
+        "start": "node dist/main",
         "lint": "tsc --noEmit && eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\"",
         "generate:component": "turbo gen api-component"
@@ -29,7 +29,7 @@
         "@dxp/integrations.mocked": "*",
         "@dxp/integrations.strapi-cms": "*",
         "@dxp/configs.integrations": "*",
-        "@o2s/telemetry": "*",
+        "@o2s/telemetry": "^1.1.0",
         "@dxp/utils.api-harmonization": "*",
         "@o2s/utils.logger": "*",
         "compression": "^1.8.0",
