--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev --turbopack",
         "dev:https": "next dev --turbopack --experimental-https",
         "build": "next build",
-        "start": "next start",
+        "postbuild": "cp -r public .next/standalone/apps/frontend && cp -r .next/static .next/standalone/apps/frontend/.next/",
+        "start": "node .next/standalone/apps/frontend/server.js",
         "lint": "tsc --noEmit && next lint",
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,json}\"",
         "generate:component": "turbo gen web-component"
