--- a/packages/utils/frontend/package.json
+++ b/packages/utils/frontend/package.json
@@ -27,6 +27,7 @@
         "concurrently": "^9.1.2",
         "eslint": "^9.27.0",
         "prettier": "^3.5.3",
+        "react-string-replace": "^1.1.1",
         "tsc-alias": "^1.8.16",
         "typescript": "^5.8.3"
     },
