--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "lint-staged": "^16.0.0",
         "playwright": "^1.55.0",
         "prettier": "^3.5.3",
+        "react-docgen-typescript": "^2.4.0",
         "simple-git": "^3.28.0",
         "storybook": "^9.1.3",
         "syncpack": "^14.0.0-alpha.11",
