--- a/apps/api-harmonization/Dockerfile
+++ b/apps/api-harmonization/Dockerfile
@@ -11,7 +11,7 @@ RUN apk add --no-cache libc6-compat openjdk11-jre
 WORKDIR /app
 RUN npm i -g turbo
 COPY . .
-RUN turbo prune @o2s/api-harmonization --docker
+RUN turbo prune @dxp/api-harmonization --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
@@ -48,4 +48,4 @@ USER expressjs
 
 COPY --from=installer /app .
 
-CMD node apps/api-harmonization/dist/src/main.js
+CMD node apps/api-harmonization/dist/main.js
