feat: updated to latest version

--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -20,18 +20,28 @@
         "generate:component": "turbo gen api-component"
     },
     "dependencies": {
+        "@dxp/blocks.bento-grid": "^0.1.1",
+        "@dxp/blocks.cta-section": "^0.1.2",
+        "@dxp/blocks.document-list": "^0.1.1",
+        "@dxp/blocks.faq": "^0.1.2",
+        "@dxp/blocks.feature-section": "^0.1.4",
+        "@dxp/blocks.feature-section-grid": "^0.0.7",
+        "@dxp/blocks.hero-section": "^0.1.3",
+        "@dxp/blocks.media-section": "^0.1.3",
+        "@dxp/blocks.pricing-section": "^0.1.2",
+        "@dxp/blocks.quick-links": "^0.1.1",
+        "@dxp/configs.integrations": "*",
+        "@dxp/framework": "^0.2.1",
+        "@dxp/integrations.mocked": "^0.4.4",
+        "@dxp/integrations.strapi-cms": "*",
+        "@dxp/utils.api-harmonization": "^0.0.5",
         "@nestjs/axios": "^4.0.0",
         "@nestjs/common": "^11.1.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.1.1",
         "@nestjs/platform-express": "^11.1.1",
-        "@dxp/framework": "*",
-        "@dxp/integrations.mocked": "*",
-        "@dxp/integrations.strapi-cms": "*",
-        "@dxp/configs.integrations": "*",
         "@o2s/telemetry": "^1.1.0",
-        "@dxp/utils.api-harmonization": "*",
-        "@o2s/utils.logger": "*",
+        "@o2s/utils.logger": "^1.1.0",
         "compression": "^1.8.0",
         "cookie": "^1.0.2",
         "cookie-parser": "^1.4.7",
@@ -44,25 +54,15 @@
         "string-template": "^1.0.0",
         "survey-core": "^2.0.9",
         "winston": "^3.17.0",
-        "xmlbuilder2": "^3.1.1",
-        "@dxp/blocks.faq": "*",
-        "@dxp/blocks.hero-section": "*",
-        "@dxp/blocks.feature-section": "*",
-        "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.quick-links": "*",
-        "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.pricing-section": "*",
-        "@dxp/blocks.document-list": "*"
+        "xmlbuilder2": "^3.1.1"
     },
     "devDependencies": {
-        "@nestjs/cli": "^11.0.7",
-        "@nestjs/schematics": "^11.0.5",
-        "@nestjs/testing": "^11.1.1",
         "@dxp/eslint-config": "*",
         "@dxp/prettier-config": "*",
         "@dxp/typescript-config": "*",
+        "@nestjs/cli": "^11.0.7",
+        "@nestjs/schematics": "^11.0.5",
+        "@nestjs/testing": "^11.1.1",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@turbo/gen": "^2.5.3",
         "@types/compression": "^1.7.5",
