--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -20,17 +20,32 @@
         "generate:component": "turbo gen api-component"
     },
     "dependencies": {
+        "@dxp/blocks.article": "*",
+        "@dxp/blocks.article-list": "*",
+        "@dxp/blocks.article-search": "*",
+        "@dxp/blocks.bento-grid": "*",
+        "@dxp/blocks.category": "*",
+        "@dxp/blocks.category-list": "*",
+        "@dxp/blocks.cta-section": "*",
+        "@dxp/blocks.document-list": "*",
+        "@dxp/blocks.faq": "*",
+        "@dxp/blocks.feature-section": "*",
+        "@dxp/blocks.feature-section-grid": "*",
+        "@dxp/blocks.hero-section": "*",
+        "@dxp/blocks.media-section": "*",
+        "@dxp/blocks.pricing-section": "*",
+        "@dxp/blocks.quick-links": "*",
+        "@dxp/configs.integrations": "*",
+        "@dxp/framework": "*",
+        "@dxp/integrations.mocked": "*",
+        "@dxp/integrations.strapi-cms": "*",
+        "@dxp/utils.api-harmonization": "*",
         "@nestjs/axios": "^4.0.0",
         "@nestjs/common": "^11.1.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.1.1",
         "@nestjs/platform-express": "^11.1.1",
-        "@dxp/framework": "*",
-        "@dxp/integrations.mocked": "*",
-        "@dxp/integrations.strapi-cms": "*",
-        "@dxp/configs.integrations": "*",
         "@o2s/telemetry": "^1.1.0",
-        "@dxp/utils.api-harmonization": "*",
         "@o2s/utils.logger": "*",
         "compression": "^1.8.0",
         "cookie": "^1.0.2",
@@ -44,25 +59,15 @@
         "string-template": "^1.0.0",
         "survey-core": "^2.0.9",
         "winston": "^3.17.0",
-        "xmlbuilder2": "^3.1.1",
-        "@dxp/blocks.faq": "*",
-        "@dxp/blocks.hero-section": "*",
-        "@dxp/blocks.feature-section": "*",
-        "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.quick-links": "*",
-        "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.pricing-section": "*",
-        "@dxp/blocks.document-list": "*"
+        "xmlbuilder2": "^3.1.1"
     },
     "devDependencies": {
-        "@nestjs/cli": "^11.0.7",
-        "@nestjs/schematics": "^11.0.5",
-        "@nestjs/testing": "^11.1.1",
         "@dxp/eslint-config": "*",
         "@dxp/prettier-config": "*",
         "@dxp/typescript-config": "*",
+        "@nestjs/cli": "^11.0.7",
+        "@nestjs/schematics": "^11.0.5",
+        "@nestjs/testing": "^11.1.1",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@turbo/gen": "^2.5.3",
         "@types/compression": "^1.7.5",
