--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,9 +14,24 @@
     },
     "dependencies": {
         "@dxp/api-harmonization": "*",
+        "@dxp/blocks.article": "*",
+        "@dxp/blocks.article-list": "*",
+        "@dxp/blocks.article-search": "*",
+        "@dxp/blocks.bento-grid": "*",
+        "@dxp/blocks.category": "*",
+        "@dxp/blocks.category-list": "*",
+        "@dxp/blocks.cta-section": "*",
+        "@dxp/blocks.document-list": "*",
+        "@dxp/blocks.faq": "*",
+        "@dxp/blocks.feature-section": "*",
+        "@dxp/blocks.feature-section-grid": "*",
+        "@dxp/blocks.hero-section": "*",
+        "@dxp/blocks.media-section": "*",
+        "@dxp/blocks.pricing-section": "*",
+        "@dxp/blocks.quick-links": "*",
         "@dxp/framework": "*",
-        "@dxp/ui": "*",
         "@dxp/integrations.mocked": "*",
+        "@dxp/ui": "*",
         "class-variance-authority": "^0.7.1",
         "date-fns": "^4.1.0",
         "dotenv-cli": "^8.0.0",
@@ -36,23 +51,13 @@
         "survey-react-ui": "^2.0.9",
         "throttle-debounce": "^5.0.2",
         "yup": "^1.6.1",
-        "zod": "^3.25.4",
-        "@dxp/blocks.faq": "*",
-        "@dxp/blocks.hero-section": "*",
-        "@dxp/blocks.feature-section": "*",
-        "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.quick-links": "*",
-        "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.pricing-section": "*",
-        "@dxp/blocks.document-list": "*"
+        "zod": "^3.25.4"
     },
     "devDependencies": {
-        "@next/bundle-analyzer": "^15.3.2",
         "@dxp/eslint-config": "*",
         "@dxp/prettier-config": "*",
         "@dxp/typescript-config": "*",
+        "@next/bundle-analyzer": "^15.3.2",
         "@svgr/webpack": "^8.1.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@turbo/gen": "^2.5.3",
