feat: updated to latest version

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,23 +14,23 @@
     },
     "dependencies": {
         "@dxp/api-harmonization": "*",
-        "@dxp/blocks.article": "*",
-        "@dxp/blocks.article-list": "*",
-        "@dxp/blocks.article-search": "*",
-        "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.category": "*",
-        "@dxp/blocks.category-list": "*",
-        "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.document-list": "*",
-        "@dxp/blocks.faq": "*",
-        "@dxp/blocks.feature-section": "*",
-        "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.hero-section": "*",
-        "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.pricing-section": "*",
-        "@dxp/blocks.quick-links": "*",
-        "@dxp/framework": "*",
-        "@dxp/integrations.mocked": "*",
+        "@dxp/blocks.article": "^1.1.1",
+        "@dxp/blocks.article-list": "^1.1.1",
+        "@dxp/blocks.article-search": "^1.1.1",
+        "@dxp/blocks.bento-grid": "^0.1.1",
+        "@dxp/blocks.category": "^1.1.1",
+        "@dxp/blocks.category-list": "^1.1.0",
+        "@dxp/blocks.cta-section": "^0.1.2",
+        "@dxp/blocks.document-list": "^0.1.1",
+        "@dxp/blocks.faq": "^0.1.2",
+        "@dxp/blocks.feature-section": "^0.1.4",
+        "@dxp/blocks.feature-section-grid": "^0.0.7",
+        "@dxp/blocks.hero-section": "^0.1.3",
+        "@dxp/blocks.media-section": "^0.1.3",
+        "@dxp/blocks.pricing-section": "^0.1.2",
+        "@dxp/blocks.quick-links": "^0.1.1",
+        "@dxp/framework": "^0.3.0",
+        "@dxp/integrations.mocked": "^0.5.1",
         "@dxp/ui": "*",
         "class-variance-authority": "^0.7.1",
         "date-fns": "^4.1.0",
