--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -20,33 +20,33 @@
         "generate:component": "turbo gen api-component"
     },
     "dependencies": {
-        "@dxp/blocks.article": "*",
-        "@dxp/blocks.article-list": "*",
-        "@dxp/blocks.article-search": "*",
-        "@dxp/blocks.bento-grid": "*",
-        "@dxp/blocks.category": "*",
-        "@dxp/blocks.category-list": "*",
-        "@dxp/blocks.cta-section": "*",
-        "@dxp/blocks.document-list": "*",
-        "@dxp/blocks.faq": "*",
-        "@dxp/blocks.feature-section": "*",
-        "@dxp/blocks.feature-section-grid": "*",
-        "@dxp/blocks.hero-section": "*",
-        "@dxp/blocks.media-section": "*",
-        "@dxp/blocks.pricing-section": "*",
-        "@dxp/blocks.quick-links": "*",
+        "@dxp/blocks.article": "^1.1.1",
+        "@dxp/blocks.article-list": "^1.1.1",
+        "@dxp/blocks.article-search": "^1.1.1",
+        "@dxp/blocks.bento-grid": "^0.1.1",
+        "@dxp/blocks.category": "^1.1.1",
+        "@dxp/blocks.category-list": "^1.1.0",
+        "@dxp/blocks.cta-section": "^0.1.2",
+        "@dxp/blocks.document-list": "^0.1.1",
+        "@dxp/blocks.faq": "^0.1.2",
+        "@dxp/blocks.feature-section": "^0.1.4",
+        "@dxp/blocks.feature-section-grid": "^0.0.7",
+        "@dxp/blocks.hero-section": "^0.1.3",
+        "@dxp/blocks.media-section": "^0.1.3",
+        "@dxp/blocks.pricing-section": "^0.1.2",
+        "@dxp/blocks.quick-links": "^0.1.1",
         "@dxp/configs.integrations": "*",
-        "@dxp/framework": "*",
-        "@dxp/integrations.mocked": "*",
+        "@dxp/framework": "^0.3.0",
+        "@dxp/integrations.mocked": "^0.5.1",
         "@dxp/integrations.strapi-cms": "*",
-        "@dxp/utils.api-harmonization": "*",
+        "@dxp/utils.api-harmonization": "^0.0.5",
         "@nestjs/axios": "^4.0.0",
         "@nestjs/common": "^11.1.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.1.1",
         "@nestjs/platform-express": "^11.1.1",
         "@o2s/telemetry": "^1.1.0",
-        "@o2s/utils.logger": "*",
+        "@o2s/utils.logger": "^1.1.0",
         "compression": "^1.8.0",
         "cookie": "^1.0.2",
         "cookie-parser": "^1.4.7",
