--- a/packages/blocks/article-search/tsconfig.frontend.json
+++ b/packages/blocks/article-search/tsconfig.frontend.json
@@ -13,6 +13,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/article-search.url.ts",
         "src/api-harmonization/article-search.client.ts",
         "src/api-harmonization/article-search.model.ts",
         "src/api-harmonization/article-search.request.ts",
