--- a/packages/blocks/article/tsconfig.frontend.json
+++ b/packages/blocks/article/tsconfig.frontend.json
@@ -13,6 +13,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/article.url.ts",
         "src/api-harmonization/article.client.ts",
         "src/api-harmonization/article.model.ts",
         "src/api-harmonization/article.request.ts",
