--- a/packages/blocks/category-list/tsconfig.sdk.json
+++ b/packages/blocks/category-list/tsconfig.sdk.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "src/sdk",
+        "src/api-harmonization/category-list.url.ts",
         "src/api-harmonization/category-list.client.ts",
         "src/api-harmonization/category-list.model.ts",
         "src/api-harmonization/category-list.request.ts"
