--- a/packages/blocks/category/tsconfig.frontend.json
+++ b/packages/blocks/category/tsconfig.frontend.json
@@ -13,6 +13,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/category.url.ts",
         "src/api-harmonization/category.client.ts",
         "src/api-harmonization/category.model.ts",
         "src/api-harmonization/category.request.ts",
