--- a/packages/blocks/category/tsconfig.sdk.json
+++ b/packages/blocks/category/tsconfig.sdk.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "src/sdk",
+        "src/api-harmonization/category.url.ts",
         "src/api-harmonization/category.client.ts",
         "src/api-harmonization/category.model.ts",
         "src/api-harmonization/category.request.ts"
