--- a/packages/blocks/feature-section-grid/tsconfig.sdk.json
+++ b/packages/blocks/feature-section-grid/tsconfig.sdk.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "src/sdk",
+        "src/api-harmonization/feature-section-grid.url.ts",
         "src/api-harmonization/feature-section-grid.client.ts",
         "src/api-harmonization/feature-section-grid.model.ts",
         "src/api-harmonization/feature-section-grid.request.ts"
