--- a/packages/blocks/quick-links/tsconfig.sdk.json
+++ b/packages/blocks/quick-links/tsconfig.sdk.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "src/sdk",
+        "src/api-harmonization/quick-links.url.ts",
         "src/api-harmonization/quick-links.client.ts",
         "src/api-harmonization/quick-links.model.ts",
         "src/api-harmonization/quick-links.request.ts"
