--- a/packages/blocks/bento-grid/tsconfig.frontend.json
+++ b/packages/blocks/bento-grid/tsconfig.frontend.json
@@ -14,6 +14,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/bento-grid.url.ts",
         "src/api-harmonization/bento-grid.client.ts",
         "src/api-harmonization/bento-grid.model.ts",
         "src/api-harmonization/bento-grid.request.ts",
