--- a/packages/blocks/document-list/tsconfig.frontend.json
+++ b/packages/blocks/document-list/tsconfig.frontend.json
@@ -14,6 +14,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/document-list.url.ts",
         "src/api-harmonization/document-list.client.ts",
         "src/api-harmonization/document-list.model.ts",
         "src/api-harmonization/document-list.request.ts",
