--- a/packages/blocks/faq/tsconfig.frontend.json
+++ b/packages/blocks/faq/tsconfig.frontend.json
@@ -14,6 +14,7 @@
     },
     "include": [
         "src/frontend",
+        "src/api-harmonization/faq.url.ts",
         "src/api-harmonization/faq.client.ts",
         "src/api-harmonization/faq.model.ts",
         "src/api-harmonization/faq.request.ts",
