--- a/packages/blocks/hero-section/tsconfig.sdk.json
+++ b/packages/blocks/hero-section/tsconfig.sdk.json
@@ -12,6 +12,7 @@
     },
     "include": [
         "src/sdk",
+        "src/api-harmonization/hero-section.url.ts",
         "src/api-harmonization/hero-section.client.ts",
         "src/api-harmonization/hero-section.model.ts",
         "src/api-harmonization/hero-section.request.ts"
