--- a/apps/api-harmonization/package.json
+++ b/apps/api-harmonization/package.json
@@ -40,11 +40,12 @@
         "@dxp/integrations.mocked": "*",
         "@dxp/integrations.strapi-cms": "*",
         "@dxp/utils.api-harmonization": "*",
-        "@nestjs/axios": "^4.0.0",
-        "@nestjs/common": "^11.1.1",
+        "@nestjs/axios": "^4.0.1",
+        "@nestjs/common": "^11.1.6",
         "@nestjs/config": "^4.0.2",
-        "@nestjs/core": "^11.1.1",
-        "@nestjs/platform-express": "^11.1.1",
+        "@nestjs/core": "^11.1.6",
+        "@nestjs/platform-express": "^11.1.6",
+        "@nestjs/terminus": "^11.0.0",
         "@o2s/telemetry": "^1.1.0",
         "@o2s/utils.logger": "*",
         "compression": "^1.8.0",
@@ -65,9 +66,9 @@
         "@dxp/eslint-config": "*",
         "@dxp/prettier-config": "*",
         "@dxp/typescript-config": "*",
-        "@nestjs/cli": "^11.0.7",
-        "@nestjs/schematics": "^11.0.5",
-        "@nestjs/testing": "^11.1.1",
+        "@nestjs/cli": "^11.0.10",
+        "@nestjs/schematics": "^11.0.8",
+        "@nestjs/testing": "^11.1.6",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@turbo/gen": "^2.5.3",
         "@types/compression": "^1.7.5",
