chore(deps): updated renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,6 @@
     "vulnerabilityAlerts": {
         "enabled": true
     },
-    "osvVulnerabilityAlerts": true
+    "osvVulnerabilityAlerts": true,
+    "rangeStrategy": "bump"
 }
